Sonar fix 5 : Bugs